added Slider component, BebasNeue font files, removed unnecessary stuff in Navigation

--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -32,8 +32,9 @@ $color-white: #fff;
 $color-black: #000;
 //------------- FONTS ------------
 
-$font: 'PTSans', helvetica, arial, sans-serif;
-$font-title: 'PTSans', helvetica, arial, sans-serif;
+$font: "PTSans", helvetica, arial, sans-serif;
+$font-title: "PTSans", helvetica, arial, sans-serif;
+$font-date: "BebasNeue", helvetica, arial, sans-serif;
 
 $font-size: 16;
 //-------------------------------
