--- a/src/components/HistoricalEvents/historicalEvents.scss
+++ b/src/components/HistoricalEvents/historicalEvents.scss
@@ -4,7 +4,6 @@
   grid-template-rows: repeat(5, max-content);
   width: 100%;
   max-width: 1440px;
-  height: 100vh;
   background: linear-gradient(to bottom, transparent calc(50% - 1px), $color-border 50%, transparent 50%),
     linear-gradient(to right, transparent calc(50% - 1px), $color-border 50%, transparent 50%);
   border-right: 1px solid $color-border;
@@ -80,5 +79,7 @@
   &__slider-wrapper {
     grid-row: 5 / 6;
     grid-column: 1 / 3;
+    padding-top: 56px;
+    padding-bottom: 104px;
   }
 }
