improved styles and adaptive

--- a/src/components/HistoricalEvents/historicalEvents.scss
+++ b/src/components/HistoricalEvents/historicalEvents.scss
@@ -1,10 +1,11 @@
 .historical-events {
   display: grid;
-  grid-template-columns: 1fr 2fr;
   grid-template-rows: repeat(5, max-content);
+  grid-template-columns: 1fr 2fr;
   width: 100%;
   max-width: 1440px;
-  background: linear-gradient(to bottom, transparent calc(50% - 1px), $color-border 50%, transparent 50%),
+  font-family: $font;
+  background: linear-gradient(to bottom, transparent calc(51.8vh - 1px), $color-border 51.8vh, transparent 51.8vh),
     linear-gradient(to right, transparent calc(50% - 1px), $color-border 50%, transparent 50%);
   border-right: 1px solid $color-border;
   border-left: 1px solid $color-border;
@@ -14,11 +15,7 @@
   }
 
   @include media-breakpoint-down($md_middle) {
-    border: 0px;
-  }
-
-  @include media-breakpoint-down($sm_middle) {
-    padding-left: 20px;
+    border: 0;
   }
 
   &__title {
@@ -55,6 +52,11 @@
       background: linear-gradient(180deg, $color-blue -5%, $color-pink 85%);
       content: "";
 
+      @include media-breakpoint-down($lg_middle) {
+        top: 2px;
+        height: 94%;
+      }
+
       @include media-breakpoint-down($md_middle) {
         background: transparent;
       }
@@ -74,6 +76,13 @@
   &__navigation-wrapper {
     grid-row: 4 / 5;
     grid-column: 1 / 3;
+
+    @include media-breakpoint-down($md) {
+      grid-row: 5 / 6;
+      grid-column: 1 / 3;
+
+      padding-bottom: 13px;
+    }
   }
 
   &__slider-wrapper {
@@ -81,5 +90,15 @@
     grid-column: 1 / 3;
     padding-top: 56px;
     padding-bottom: 104px;
+
+    @include media-breakpoint-down($md) {
+      grid-row: 4 / 5;
+      grid-column: 1 / 3;
+      padding-bottom: 50px;
+    }
+
+    @include media-breakpoint-down($sm_middle) {
+      padding-bottom: 0px;
+    }
   }
 }
