--- a/src/shared/styles/base.scss
+++ b/src/shared/styles/base.scss
@@ -58,8 +58,8 @@ p {
 }
 
 .visually-hidden:not(:focus, :active),
-input[type="checkbox"].visually-hidden,
-input[type="radio"].visually-hidden {
+input[type='checkbox'].visually-hidden,
+input[type='radio'].visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
