--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -1,58 +1,62 @@
-$color-button-border: rgba(66, 86, 122, 0.5);
+$color-button-border: rgb(66 86 122 / 50%);
 
 .navigation {
-  width: 100%;
-  grid-column: 1 / 2;
   display: grid;
+  grid-column: 1 / 2;
   grid-template-rows: 35px 50px;
   grid-template-columns: repeat(2, 50px);
-  column-gap: 20px;
+  width: 100%;
   padding-left: 80px;
+  font-family: $font;
+  column-gap: 20px;
 
   @include media-breakpoint-down($md_middle) {
     padding-left: 40px;
   }
 
   @include media-breakpoint-down($sm_middle) {
-    padding-left: 20px;
-    grid-template-columns: repeat(2, max-content);
     grid-template-rows: repeat(2, max-content);
-    column-gap: 0px;
+    grid-template-columns: repeat(2, max-content);
+    padding-top: 10px;
+    padding-left: 20px;
+    column-gap: 0;
   }
 
   &__total-slides {
     grid-row: 1 / 2;
     grid-column: 1 / 3;
-
+    color: $color-grey;
     font-weight: 400;
     font-size: 14px;
     line-height: 12px;
 
-    color: $color-grey;
-
     @include media-breakpoint-down($sm_middle) {
-      line-height: 36px;
+      line-height: 32px;
     }
   }
 
   &__prev,
   &__next {
-    cursor: pointer;
     width: 50px;
     height: 50px;
+    padding: 0;
+    background-color: transparent;
     border: 1px solid $color-button-border;
     border-radius: 50%;
-    background-color: transparent;
-    padding: 0px;
+    cursor: pointer;
+
+    &:disabled {
+      opacity: 0.5;
+    }
 
     &::before {
       position: absolute;
-      content: "";
+      display: inline-block;
       width: 8px;
       height: 8px;
       border: solid $color-grey;
       border-width: 0 2px 2px 0;
-      display: inline-block;
+      content: "";
 
       @include media-breakpoint-down($sm_middle) {
         width: 4px;
@@ -72,8 +76,8 @@ $color-button-border: rgba(66, 86, 122, 0.5);
 
   &__prev {
     position: relative;
-    grid-column: 1 / 2;
     grid-row: 2 / 3;
+    grid-column: 1 / 2;
 
     &::before {
       top: 18px;
@@ -102,8 +106,8 @@ $color-button-border: rgba(66, 86, 122, 0.5);
     }
 
     @include media-breakpoint-down($sm_middle) {
-      grid-column: 2 / 3;
       grid-row: 2 / 3;
+      grid-column: 2 / 3;
       margin-left: 8.3px;
     }
   }
