--- a/src/components/Slider/slider.scss
+++ b/src/components/Slider/slider.scss
@@ -1,14 +1,25 @@
-$color-button-shadow: rgba(56, 119, 238, 0.1);
+$color-button-shadow: rgb(56 119 238 / 10%);
 
 .slider {
-  width: 100%;
   position: relative;
-  padding-left: 80px;
-  padding-right: 80px;
   display: flex;
   align-items: center;
+  width: 100%;
+  padding-right: 80px;
+  padding-left: 80px;
+  font-family: $font;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
+
+  @include media-breakpoint-down($md) {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+
+  @include media-breakpoint-down($sm_middle) {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
 
   &_visible {
     opacity: 1;
@@ -19,21 +30,37 @@ $color-button-shadow: rgba(56, 119, 238, 0.1);
     flex-direction: column;
     width: 100%;
     max-width: 320px;
+
+    @include media-breakpoint-down($md) {
+      min-width: 166px;
+    }
   }
 
   &__year {
-    font-family: $font-date;
+    margin-bottom: 15px;
+    color: $color-blue;
     font-weight: 400;
     font-size: 25px;
+    letter-spacing: 1px;
+    font-family: $font-date;
     text-transform: uppercase;
-    color: $color-blue;
-    margin-bottom: 15px;
+
+    @include media-breakpoint-down($sm) {
+      font-size: 16px;
+      line-height: 120%;
+    }
   }
+
   &__text {
+    color: $color-grey;
     font-weight: 400;
     font-size: 20px;
     line-height: 30px;
-    color: $color-grey;
+
+    @include media-breakpoint-down($sm) {
+      font-size: 14px;
+      line-height: 145%;
+    }
   }
 }
 
@@ -41,26 +68,30 @@ $color-button-shadow: rgba(56, 119, 238, 0.1);
 .swiper-button-prev {
   position: absolute;
   z-index: 2;
-  cursor: pointer;
   width: 40px;
   height: 40px;
-  box-shadow: 0px 0px 15px $color-button-shadow;
-  border: 0px;
-  border-radius: 50%;
+  padding: 0;
   background-color: $color-white;
-  padding: 0px;
+  border: 0;
+  border-radius: 50%;
+  box-shadow: 0 0 15px $color-button-shadow;
+  cursor: pointer;
 
   &::before {
     position: absolute;
-    content: "";
+    display: inline-block;
     width: 6px;
     height: 6px;
     border: solid $color-blue;
     border-width: 0 2px 2px 0;
-    display: inline-block;
+    content: "";
   }
 
   &:disabled {
+    display: none;
+  }
+
+  @include media-breakpoint-down($md) {
     display: none;
   }
 }
@@ -82,5 +113,11 @@ $color-button-shadow: rgba(56, 119, 238, 0.1);
     top: 16px;
     left: 15px;
     transform: rotate(-45deg);
+  }
+}
+
+.swiper-slide {
+  @include media-breakpoint-down($md) {
+    min-width: 166px;
   }
 }
