--- a/src/components/HistoricalEvents/historicalEvents.scss
+++ b/src/components/HistoricalEvents/historicalEvents.scss
@@ -5,12 +5,7 @@
   width: 100%;
   max-width: 1440px;
   font-family: $font;
-  background: linear-gradient(
-      to bottom,
-      transparent calc(51.8vh - 1px),
-      $color-border 51.8vh,
-      transparent 51.8vh
-    ),
+  background: linear-gradient(to bottom, transparent calc(51.8vh - 1px), $color-border 51.8vh, transparent 51.8vh),
     linear-gradient(to right, transparent calc(50% - 1px), $color-border 50%, transparent 50%);
   border-right: 1px solid $color-border;
   border-left: 1px solid $color-border;
@@ -25,15 +20,11 @@
 
   &__title {
     position: relative;
-    display: -webkit-box;
     grid-row: 1 / 2;
     grid-column: 1 / 2;
     height: max-content;
     margin-top: 170px;
     padding-left: 80px;
-    overflow: hidden;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
 
     @include media-breakpoint-down($lg_middle) {
       margin-top: 120px;
@@ -59,7 +50,7 @@
       width: 5px;
       height: 89%;
       background: linear-gradient(180deg, $color-blue -5%, $color-pink 85%);
-      content: '';
+      content: "";
 
       @include media-breakpoint-down($lg_middle) {
         top: 2px;
@@ -78,6 +69,10 @@
 
     @include media-breakpoint-down($md) {
       padding-bottom: 37px;
+    }
+
+    @include media-breakpoint-down($sm) {
+      padding-bottom: 0px;
     }
   }
 
@@ -103,6 +98,7 @@
     grid-column: 1 / 3;
     padding-top: 56px;
     padding-bottom: 104px;
+    height: 353px;
 
     @include media-breakpoint-down($md) {
       grid-row: 4 / 5;
@@ -110,20 +106,16 @@
       padding-top: 19px;
       padding-bottom: 50px;
 
-      &::before {
-        position: absolute;
-        top: 0;
-        left: 50%;
-        width: 87%;
-        height: 1px;
-        background-color: #c7cdd9;
-        transform: translate(-50%);
-        content: '';
-      }
+      height: 310px;
+    }
+
+    @include media-breakpoint-down($sm) {
+      height: 243px;
     }
 
     @include media-breakpoint-down($sm_middle) {
       padding-bottom: 0;
+      height: 265px;
     }
   }
 }
