--- a/src/components/HistoricalEvents/historicalEvents.scss
+++ b/src/components/HistoricalEvents/historicalEvents.scss
@@ -1,4 +1,5 @@
 .historical-events {
+  position: relative;
   display: grid;
   grid-template-rows: repeat(5, max-content);
   grid-template-columns: 1fr 2fr;
@@ -77,8 +78,11 @@
   }
 
   &__spinner-wrapper {
-    grid-row: 3 / 4;
-    grid-column: 1 / 3;
+    z-index: 2;
+    position: absolute;
+    top: 42.3%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   &__navigation-wrapper {
