--- a/src/components/Spinner/spinner.scss
+++ b/src/components/Spinner/spinner.scss
@@ -1,51 +1,70 @@
+$color-dot-number-border: rgb(48 62 88 / 50%);
+$color-spinner-border: rgb(66 86 122 / 20%);
+
+@mixin dot-number() {
+  width: 56px;
+  height: 56px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  background: $color-background;
+  border: 1px solid $color-dot-number-border;
+
+  @include media-breakpoint-up($md) {
+    color: $color-grey;
+  }
+}
+
 .spinner {
   position: relative;
   display: block;
   width: 530px;
   height: 530px;
-  border: 1px solid rgba(66, 86, 122, 0.2);
-  border-radius: 50%;
   font-family: $font;
+  border: 1px solid $color-spinner-border;
+  border-radius: 50%;
+
+  @include media-breakpoint-down($md) {
+    position: unset;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 92px;
+    height: 20px;
+    border: 0;
+    border-radius: unset;
+  }
 
   &__dot {
-    cursor: pointer;
     position: absolute;
-    padding: 0;
     top: 50%;
     left: 50%;
-    width: 56px;
-    height: 56px;
-    opacity: 0;
-    background: transparent;
-    border-radius: 50%;
-    border: 1px solid transparent;
     display: flex;
     align-items: center;
     justify-content: center;
-
-    // &:hover {
-    //   .spinner__dot-number {
-    //     background: #f4f5f9;
-    //     border: 1px solid rgba(48, 62, 88, 0.5);
-    //     width: 56px;
-    //     height: 56px;
-    //     color: #42567a;
-    //     font-weight: 400;
-    //     font-size: 20px;
-    //     line-height: 30px;
-    //   }
-    // }
-  }
-
-  .spinner__dot-number {
-    background: #f4f5f9;
-    border: 1px solid rgba(48, 62, 88, 0.5);
     width: 56px;
     height: 56px;
-    color: #42567a;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 30px;
+    padding: 0;
+    background: transparent;
+    border: 1px solid transparent;
+    border-radius: 50%;
+    cursor: pointer;
+    opacity: 0;
+
+    @include media-breakpoint-down($md) {
+      position: unset;
+      width: 12px;
+      height: 12px;
+    }
+
+    &:hover {
+      .spinner__dot-number {
+        @include media-breakpoint-up($md) {
+          @include dot-number();
+        }
+      }
+    }
   }
 
   &__dot-number {
@@ -54,21 +73,46 @@
     justify-content: center;
     width: 6px;
     height: 6px;
-    transition: all 0.3s linear;
-    background: #42567a;
-    border-radius: 50%;
-    border: 1px solid #42567a;
     color: transparent;
+    background: $color-grey;
+    border: 1px solid $color-grey;
+    border-radius: 50%;
+    transition: all 0.3s linear;
+
+    @include media-breakpoint-down($md) {
+      opacity: 0.4;
+    }
+
+    &_visible {
+      @include dot-number();
+      @include media-breakpoint-down($md) {
+        display: block;
+        width: 6px;
+        height: 6px;
+        font-size: 0;
+        line-height: 0px;
+        background: $color-grey;
+        border: 0;
+        opacity: 1;
+      }
+    }
   }
 
-  // &__dot-title {
-  //   position: absolute;
-  //   right: -71px;
-  //   font-weight: 700;
-  //   font-size: 20px;
-  //   line-height: 30px;
-  //   color: #42567a;
-  //   opacity: 0;
-  //   transition: opacity 0.3s linear;
-  // }
+  &__dot-title {
+    position: absolute;
+    left: 71px;
+    color: $color-grey;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+    visibility: hidden;
+    cursor: default;
+    opacity: 0;
+    transition: opacity 0.3s linear;
+
+    &_visible {
+      visibility: unset;
+      opacity: 1;
+    }
+  }
 }
