--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -56,7 +56,7 @@ $color-button-border: rgb(66 86 122 / 50%);
       height: 8px;
       border: solid $color-grey;
       border-width: 0 2px 2px 0;
-      content: '';
+      content: "";
 
       @include media-breakpoint-down($sm_middle) {
         width: 4px;
@@ -71,6 +71,11 @@ $color-button-border: rgb(66 86 122 / 50%);
 
     &:hover {
       background-color: $color-white;
+    }
+
+    &:focus {
+      outline: 2px solid $color-pink;
+      outline-offset: 4px;
     }
   }
 
